# suiverify-indexer

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Cargo.toml  DEPLOYMENT_STATUS.md  Dockerfile  LOGGING.md  README.md  SECURITY_INCIDENT.md  SESSION_LOG.md  TESTING_GUIDE.md  architecture.md  current_tx.md  issue_logging.md  render.yaml  test_flow.sh  test_setup.md
contract/sources/: contract.move
migrations/2025-11-13-133044-0000_did_claimed_events/: down.sql  up.sql
src/: config.rs  event_handlers.rs  events.rs  handlers.rs  main.rs  models.rs  schema.rs
