[package]
name = "suiverify-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]

sui-indexer-alt-framework = { path = "../sui/crates/sui-indexer-alt-framework" }

# Sui types
sui-types = { path = "../sui/crates/sui-types" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Diesel PostgreSQL
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
diesel-async = { version = "0.5", features = ["bb8", "postgres", "async-connection-wrapper"] }
diesel_migrations = "2.0"

# Async traits
async-trait = "0.1"

# URL parsing
url = "2.0"

# Use .env file
dotenvy = "0.15"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# BCS for event deserialization
bcs = "0.1.6"
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
